--- a/slides/sequence-space/index.html
+++ b/slides/sequence-space/index.html
@@ -1,3 +1,4 @@
-<h4>Experimental mutations exhibit multi-way interactions</h4>
+<h4>Multi-way interactions are common in measured maps</h4>
 <img class="img-inline" src="slides/sequence-space/img/sequence-space.png" />
+<small>Sailer & Harms (2017) <em>Genetics</em>, Weinreich et al (2006) <em>Science</em></small>
 
